# voltagedetection

./: .gitignore  TEST.C  pkttoBuf.py  test1.c
ACDetector/: CMakeLists.txt  build_env.ps1  ota_dfu_sop.md  pm.yml  pm_static.yml  prj.conf  sysbuild.conf
ACDetector/.cache/clangd/index/: adc_backend.c.0A5025681E163F9C.idx  adc_backend.h.716362E1B329E465.idx  ble_backend.c.8F8CD89B5F17FE9D.idx  ble_backend.h.D7E01EA3167A8608.idx  common.h.A1D05251AFD45D1D.idx  main.c.6264398DE5B3E2F0.idx  range_backend.c.39D9517D5696B530.idx  range_backend.h.14D8C08D34937D5F.idx  storage_backend.c.60F4C81B10D7E7AF.idx  storage_backend.h.ADA35863E137CD89.idx
ACDetector/src/: common.h  main.c
ACDetector/src/adc_lib/: adc_backend.c  adc_backend.h
ACDetector/src/ble_lib/: ble_backend.c  ble_backend.h
ACDetector/src/range_lib/: range_backend.c  range_backend.h
ACDetector/src/storage_lib/: storage_backend.c  storage_backend.h
BLE/: prj.conf
BLE/build_1/: .vscode-nrf-connect.json  build_info.yml
BLE/build_1/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
BLE/build_1/zephyr/: .cmake.dotconfig.checksum  .config  edt.pickle  edt.pickle.cmake.new  isr_tables.c  linker.cmd  (+13 more)
BLE/src/: main.c
BLE_ADV/: CMakeLists.txt  prj.conf
BLE_ADV/src/: main.c
BLE__32/: CMakeLists.txt  prj.conf
BLE__32/src/: main.c
HC4067intterface/: CMakeLists.txt  prj.conf
HC4067intterface/src/: hc4067.c  hc4067.h  main.c
OTAPytest/: debug_services.py  ota_update.py  requirements.txt  signal_analyzer.py
RSMADC/: CMakeLists.txt  prj.conf
RSMADC/build_1/: build_info.yml
RSMADC/src/: main.c
(+27 files in other folders)
